initial deployable code

--- a/app/btp-cap-samples-ui5-app/webapp/test/flpSandbox.html
+++ b/app/btp-cap-samples-ui5-app/webapp/test/flpSandbox.html
@@ -45,8 +45,8 @@
             },
             applications: {
                 "comgbsampleshtmlbtpcapsamplesu-display": {
-                    title: "Basic UI5 application in CAP",
-                    description: "Basic UI5 application in CAP",
+                    title: "basic ui5 application in CAP",
+                    description: "basic ui5 application in CAP",
                     additionalInformation: "SAPUI5.Component=com.gb.samples.html.btpcapsamplesui5app",
                     applicationType: "URL",
                     url: "../"
